fixing jumpy announcements box in IE

--- a/less/style.less
+++ b/less/style.less
@@ -631,7 +631,7 @@ div#calendar-box, div#announcements-box{
 }
 
 div#calendar-box {
-  max-height: @top-boxes-height;
+  height: @top-boxes-height;
   overflow-y: scroll;
 }
 
@@ -675,7 +675,7 @@ h3.top-boxes-margin{
 
 div#announcements-box {
   //max-height: @top-boxes-height;
-  max-height: 225px;
+  height: 225px;
   overflow-y: scroll;
 }
 
